--- a/blog.html
+++ b/blog.html
@@ -88,99 +88,27 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="images/logo.png" alt="The Rehab House Logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about_us.html">About Us</a></li>
-                <li><a href="services.html">Our Services</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
-        <!-- Search Box with Icon -->
-        <div class="search-box">
-            <input type="text" id="searchInput" placeholder="Search..." onkeypress="handleSearch(event)">
-            <button onclick="triggerSearch()"><img src="images/search-icon.png" alt="Search"></button>
-        </div>
-        <button class="hamburger" onclick="toggleMobileMenu()">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
-    </header>
+    <!-- Header Component -->
+    <div id="header-placeholder"></div>
 
     <section class="blog-header">
         <h1>Health & Wellness Insights</h1>
         <p>Expert advice on recovery, rehabilitation, and staying healthy.</p>
     </section>
 
-    <section class="blog-grid">
-        <!-- Article 1 -->
-        <article class="blog-card">
-            <div class="blog-img"
-                style="background: #e2b676; display:flex; align-items:center; justify-content:center; color:white;">
-                Image</div>
-            <div class="blog-content">
-                <span class="blog-date">Oct 15, 2025</span>
-                <h3 class="blog-title">5 Tips for Stroke Recovery at Home</h3>
-                <p class="blog-excerpt">Recovering from a stroke is a journey. Here are five essential exercises and
-                    habits to practice at home for a faster recovery...</p>
-                <a href="#" class="read-more">Read More →</a>
-            </div>
-        </article>
-
-        <!-- Article 2 -->
-        <article class="blog-card">
-            <div class="blog-img"
-                style="background: #232220; display:flex; align-items:center; justify-content:center; color:white;">
-                Image</div>
-            <div class="blog-content">
-                <span class="blog-date">Nov 02, 2025</span>
-                <h3 class="blog-title">Understanding Vestibular Therapy</h3>
-                <p class="blog-excerpt">Feeling dizzy or off-balance? Learn how vestibular rehabilitation can help treat
-                    vertigo and improve your stability...</p>
-                <a href="#" class="read-more">Read More →</a>
-            </div>
-        </article>
-
-        <!-- Article 3 -->
-        <article class="blog-card">
-            <div class="blog-img"
-                style="background: #e2b676; display:flex; align-items:center; justify-content:center; color:white;">
-                Image</div>
-            <div class="blog-content">
-                <span class="blog-date">Dec 10, 2025</span>
-                <h3 class="blog-title">Ergonomics for Back Pain</h3>
-                <p class="blog-excerpt">Working from home? Simple adjustments to your workspace can significantly reduce
-                    back and neck pain...</p>
-                <a href="#" class="read-more">Read More →</a>
-            </div>
-        </article>
+    <section class="blog-grid" id="blog-container">
+        <!-- Loaded from js/data.js -->
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <p class="footer-left">&copy; 2025 The Rehab House | <a href="admin/login.html"
-                    style="color: inherit; text-decoration: none;">Admin Login</a></p>
-
-            <!-- Social Media -->
-            <div class="footer-right">
-                <h2>Follow Us</h2>
-                <a href="https://www.instagram.com/the_rehab_house/" class="social-icon"><img
-                        src="images/instagram-icon.png" alt="Instagram"></a>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer Component -->
+    <div id="footer-placeholder"></div>
 
     <!-- Back to Top Button -->
     <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
     <!-- JavaScript -->
+    <script src="js/data.js"></script>
+    <script src="js/header_footer.js"></script>
     <script src="js/main.js"></script>
 </body>
 
