Refactor: Split data.js, fix mobile header, and implement automated blog hydration

--- a/blog.html
+++ b/blog.html
@@ -97,7 +97,12 @@
     </section>
 
     <section class="blog-grid" id="blog-container">
-        <!-- Loaded from js/data.js -->
+        <!-- Add new blog posts here using the placeholder format -->
+        <!-- The site will automatically read the Title, Date, Image, and Excerpt from the file -->
+
+        <div class="blog-placeholder" data-src="blogs/stroke-recovery.html"></div>
+        <div class="blog-placeholder" data-src="blogs/vestibular-therapy.html"></div>
+        <div class="blog-placeholder" data-src="blogs/ergonomics.html"></div>
     </section>
 
     <!-- Footer Component -->
@@ -107,7 +112,7 @@
     <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
     <!-- JavaScript -->
-    <script src="js/data.js"></script>
+    <!-- Static Blog Data (Pre-rendered) -->
     <script src="js/header_footer.js"></script>
     <script src="js/main.js"></script>
 </body>
