--- a/index.html
+++ b/index.html
@@ -63,8 +63,13 @@
     <section class="testimonials" id="testimonials">
         <h2>What Our Patients Say</h2>
         <div class="testimonial-grid" id="testimonial-container">
-            <!-- Loaded from js/data.js -->
+            <!-- Loaded from js/testimonials.js -->
         </div>
+    </section>
+
+    <!-- Recent Blogs Section -->
+    <section class="blog-grid" id="blog-container" style="padding: 50px 20px; max-width: 1200px; margin: 0 auto;">
+        <!-- Loaded from blog.html via js/main.js -->
     </section>
 
     <!-- Footer -->
@@ -76,7 +81,8 @@
     <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
     <!-- JavaScript -->
-    <script src="js/data.js"></script>
+    <script src="js/testimonials.js"></script>
+    <script src="js/faqs.js"></script>
     <script src="js/header_footer.js"></script>
     <script src="js/main.js"></script>
 </body>
