--- a/search_results.html
+++ b/search_results.html
@@ -14,51 +14,28 @@
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
-        <div class="logo">
-            <img src="images/logo.png" alt="The Rehab House Logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about_us.html">About Us</a></li>
-                <li><a href="services.html">Our Services</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
-        <!-- Search Box with Icon -->
-        <div class="search-box">
-            <input type="text" id="searchInput" placeholder="Search..." onkeypress="handleSearch(event)">
-            <button onclick="triggerSearch()"><img src="images/search-icon.png" alt="Search"></button>
-        </div>
-        <button class="hamburger" onclick="toggleMobileMenu()">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
-    </header>
+    <!-- Header Component -->
+    <div id="header-placeholder"></div>
 
     <!-- Search Results Section -->
-    <main>
+    <main class="container" style="padding: 100px 20px; min-height: 60vh;">
         <section class="search-results">
             <h1>Search Results</h1>
-            <p>Showing results for: <span id="searchQuery"></span></p>
-            <ul id="resultsList"></ul>
+            <p>Showing results for: <span id="searchQuery" style="font-weight: bold;"></span></p>
+            <ul id="resultsList" style="list-style: none; padding: 0; margin-top: 20px;">
+                <!-- Results populated by JS -->
+            </ul>
         </section>
     </main>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <p class="footer-left">&copy; 2025 The Rehab House</p>
-            <div class="footer-right">
-                <h2>Follow Us</h2>
-                <a href="https://www.instagram.com/the_rehab_house/" class="social-icon"><img
-                        src="images/instagram-icon.png" alt="Instagram"></a>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer Component -->
+    <div id="footer-placeholder"></div>
+
+    <script src="js/testimonials.js"></script> <!-- Optional if header/footer needs it? No. -->
+    <script src="js/faqs.js"></script>
+    <script src="js/header_footer.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/search.js"></script>
 </body>
 
 </html>
