--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
         </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section class="faq-section" id="faqs">
+        <h2>Frequently Asked Questions</h2>
+        <div class="accordion" id="faq-container">
+            <!-- Loaded from js/faqs.js -->
+        </div>
+    </section>
+
 
     <!-- Footer -->
     <!-- Footer Component -->
