Refactor: Standardize page layout with Hero section, move FAQs to Services

--- a/services.html
+++ b/services.html
@@ -17,6 +17,11 @@
     <!-- Header Component -->
     <div id="header-placeholder"></div>
 
+    <!-- Hero Section (Consistent Layout) -->
+    <section class="hero" id="hero">
+        <h2>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
+    </section>
+
     <!-- Main Content -->
     <main>
         <section class="services-header" id="program-overview">
