Refactor: Mobile UI overhaul, global box-sizing, img fix

--- a/services.html
+++ b/services.html
@@ -108,7 +108,7 @@
     </main>
 
     <!-- FAQ Section -->
-    <section class="faq-section" id="faq">
+    <section class="faq-section" id="faqs">
         <h2>Frequently Asked Questions</h2>
         <div class="accordion" id="faq-container">
             <!-- Loaded from js/data.js -->
