--- a/services.html
+++ b/services.html
@@ -123,7 +123,7 @@
     <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
     <!-- JavaScript -->
-    <script src="js/data.js"></script>
+    <script src="js/faqs.js"></script>
     <script src="js/header_footer.js"></script>
     <script src="js/main.js"></script>
 </body>
