feat(ux): Overhaul UX/UI with premium design, new fonts, and glassmorphism header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         content="The Rehab House - South Mumbai's First Neuro-rehabilitation Centre with Admission Facility. We offer Physiotherapy, Neurorehabilitation, Pain Management, and more.">
     <meta name="keywords"
         content="Neurorehabilitation, Physiotherapy, Mumbai, Rehabilitation Centre, Paralysis, Stroke Recovery, Pain Management, Occupational Therapy">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Outfit:wght@400;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,7 +24,11 @@
 
     <!-- Hero Section -->
     <section class="hero" id="hero">
-        <h2>THE REHAB HOUSE<br>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
+        <div class="hero-content">
+            <h1>THE REHAB HOUSE</h1>
+            <p>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</p>
+            <a href="contact.html" class="btn-hero">Book Appointment</a>
+        </div>
     </section>
 
     <!-- Highlights Section -->
