feat: Enhance search, update contact banner, and improve documentation

--- a/about_us.html
+++ b/about_us.html
@@ -17,8 +17,11 @@
     <!-- Header Component -->
     <div id="header-placeholder"></div>
 
-    <section class="hero" id="hero">
-        <h2>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
+    <section class="hero hero-about" id="hero">
+        <div class="hero-content">
+            <h1>About Us</h1>
+            <p>Our Journey, Vision, and Mission</p>
+        </div>
     </section>
     <!-- Main Content -->
     <main>
