--- a/blog.html
+++ b/blog.html
@@ -91,9 +91,11 @@
     <!-- Header Component -->
     <div id="header-placeholder"></div>
 
-    <section class="blog-header">
-        <h1>Health & Wellness Insights</h1>
-        <p>Expert advice on recovery, rehabilitation, and staying healthy.</p>
+    <section class="hero hero-blog" id="hero">
+        <div class="hero-content">
+            <h1>Health & Wellness Insights</h1>
+            <p>Expert advice on recovery, rehabilitation, and staying healthy.</p>
+        </div>
     </section>
 
     <section class="blog-grid" id="blog-container">
