--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="hero-content">
             <h1>THE REHAB HOUSE</h1>
             <p>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</p>
-            <a href="contact.html" class="btn-hero">Book Appointment</a>
+            <a href="contact.html#booking" class="btn-hero">Book Appointment</a>
         </div>
     </section>
 
