--- a/services.html
+++ b/services.html
@@ -18,8 +18,11 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section (Consistent Layout) -->
-    <section class="hero" id="hero">
-        <h2>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
+    <section class="hero hero-services" id="hero">
+        <div class="hero-content">
+            <h1>Our Services</h1>
+            <p>Comprehensive Neuro-rehabilitation and Therapy Programs</p>
+        </div>
     </section>
 
     <!-- Main Content -->
