contact us banner update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
-    <section class="hero" id="hero">
+    <section class="hero hero-home" id="hero">
         <div class="hero-content">
             <h1>THE REHAB HOUSE</h1>
             <p>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</p>
