--- a/about_us.html
+++ b/about_us.html
@@ -21,14 +21,15 @@
         <div class="hero-content">
             <h1>About Us</h1>
             <p>Our Journey, Vision, and Mission</p>
+            <p>Providing comprehensive rehabilitation programs tailored to individual needs.</p>
         </div>
     </section>
     <!-- Main Content -->
     <main>
-        <section class="about-header" id="about-header">
+        <!-- <section class="about-header" id="about-header">
             <h1>About Us</h1>
             <p>Providing comprehensive rehabilitation programs tailored to individual needs.</p>
-        </section>
+        </section> -->
 
         <section class="who-benefits" id="who-benefits">
             <h2>Who will benefits from our services:</h2>
