--- a/contact.html
+++ b/contact.html
@@ -22,15 +22,16 @@
         <div class="hero-content">
             <h1>Contact Us</h1>
             <p>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</p>
+            <p>We’d love to hear from you! Get in touch with our team.</p>
         </div>
     </section>
 
     <!-- Main Content -->
     <main>
-        <section class="contact-header">
+        <!-- <section class="contact-header">
             <h1>Contact Us</h1>
             <p>We’d love to hear from you! Get in touch with our team.</p>
-        </section>
+        </section> -->
 
         <!-- Contact Information -->
         <section class="contact-info">
