--- a/blog.html
+++ b/blog.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog | The Rehab House</title>
+    <title>Health & Wellness Blog | Physiotherapy Insights - The Rehab House</title>
     <meta name="description"
-        content="Read the latest articles on rehabilitation, physiotherapy, and wellness from experts at The Rehab House.">
-    <meta name="keywords" content="Rehab Blog, Physiotherapy Articles, Stroke Recovery Tips, Pain Management Advice">
+        content="Read expert articles on stroke recovery, pain management, physiotherapy benefits, and neurological health from The Rehab House team.">
+    <meta name="keywords"
+        content="Rehab Blog, Physiotherapy Articles, Stroke Recovery Tips, Pain Management Advice, Health Wellness">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/components.css">
@@ -102,6 +103,8 @@
         <!-- Add new blog posts here using the placeholder format -->
         <!-- The site will automatically read the Title, Date, Image, and Excerpt from the file -->
 
+        <div class="blog-placeholder" data-src="blogs/neuro-rehabilitation-process.html"></div>
+        <div class="blog-placeholder" data-src="blogs/physiotherapy-brain-injury.html"></div>
         <div class="blog-placeholder" data-src="blogs/stroke-recovery.html"></div>
         <div class="blog-placeholder" data-src="blogs/vestibular-therapy.html"></div>
         <div class="blog-placeholder" data-src="blogs/ergonomics.html"></div>
