--- a/blogs/ergonomics.html
+++ b/blogs/ergonomics.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ergonomics for Back Pain | The Rehab House</title>
+    <title>Ergonomics for Back Pain: Work from Home Tips | The Rehab House</title>
+    <meta name="description"
+        content="Relieve back pain with simple ergonomic adjustments for your home office. Expert advice on chair height, monitor position, and movement.">
+    <meta name="keywords" content="Ergonomics, Back Pain, Work From Home, Posture Tips, Office Chair Setup">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
