--- a/blogs/stroke-recovery.html
+++ b/blogs/stroke-recovery.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5 Tips for Stroke Recovery | The Rehab House</title>
+    <title>5 Essential Tips for Stroke Recovery at Home | The Rehab House</title>
+    <meta name="description"
+        content="Maximize stroke recovery with these 5 expert tips for home exercises. Learn how repetition and active movement aid neuroplasticity.">
+    <meta name="keywords"
+        content="Stroke Recovery, Home Exercises, Neuroplasticity, Stroke Rehab, Neurorehabilitation Tips">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
