--- a/blogs/vestibular-therapy.html
+++ b/blogs/vestibular-therapy.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Understanding Vestibular Therapy | The Rehab House</title>
+    <title>What is Vestibular Therapy? Balance & Vertigo Treatment | The Rehab House</title>
+    <meta name="description"
+        content="Understand Vestibular Rehabilitation Therapy (VRT) for dizziness, vertigo, and balance disorders. Learn how our specialized therapy helps.">
+    <meta name="keywords" content="Vestibular Therapy, VRT, Vertigo Treatment, Balance Disorder, Dizziness Rehab">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
