--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us | The Rehab House</title>
+    <title>Contact Us | Book Your Physiotherapy Appointment - The Rehab House</title>
     <meta name="description"
-        content="Contact The Rehab House for appointment bookings and inquiries. Located at Purandare Diagnostic Centre, Mumbai.">
+        content="Get in touch with The Rehab House, Mumbai. Call us or visit our clinic for expert physiotherapy and rehabilitation services. Book your session now.">
     <meta name="keywords"
-        content="Contact Rehab House, Appointment, Physiotherapy Appointment, Neurorehabilitation Mumbai, Clinic Location">
+        content="Contact Rehab House, Appointment, Physiotherapy Appointment, Neurorehabilitation Mumbai, Clinic Location, Book Physiotherapist">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
