--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | The Rehab House - Update</title>
+    <title>The Rehab House | Premier Neuro-rehabilitation Center & Physiotherapy in Mumbai</title>
     <meta name="description"
-        content="The Rehab House - South Mumbai's First Neuro-rehabilitation Centre with Admission Facility. We offer Physiotherapy, Neurorehabilitation, Pain Management, and more.">
+        content="South Mumbai's leading Neuro-rehabilitation Centre offering inpatient admission, physiotherapy, pain management, and holistic recovery plans. Book an appointment today!">
     <meta name="keywords"
-        content="Neurorehabilitation, Physiotherapy, Mumbai, Rehabilitation Centre, Paralysis, Stroke Recovery, Pain Management, Occupational Therapy">
+        content="Neurorehabilitation, Physiotherapy, Mumbai, Rehabilitation Centre, Paralysis, Stroke Recovery, Pain Management, Occupational Therapy, Inpatient Rehab">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
