--- a/about_us.html
+++ b/about_us.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | The Rehab House</title>
+    <title>About Us | Expert Rehabilitation Team & Facilities - The Rehab House</title>
     <meta name="description"
-        content="Learn about The Rehab House, our mission, vision, and the expert team dedicated to your recovery and rehabilitation.">
+        content="Meet our expert team of physiotherapists and specialists at The Rehab House. Committed to providing comprehensive, personalized rehabilitation in Mumbai.">
     <meta name="keywords"
-        content="About Rehab House, Dr. Vidhi Dave, Dr. Vinit Gada, Rehabilitation Team, Mission Vision">
+        content="About Rehab House, Dr. Vidhi Dave, Dr. Vinit Gada, Rehabilitation Team, Mission Vision, Physiotherapy Clinic Mumbai">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
