--- a/admin/login.html
+++ b/admin/login.html
@@ -5,24 +5,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login | The Rehab House</title>
+    <!-- Use main site fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Outfit:wght@400;600;700&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
     <style>
-        .login-container {
-            max-width: 400px;
-            margin: 100px auto;
-            padding: 40px;
-            background-color: var(--white-color);
-            /* Fallback or specific white */
-            background: #fff;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            text-align: center;
+        :root {
+            --primary-color: #2c3e50;
+            --secondary-color: #3498db;
+            --accent-color: #e74c3c;
+            --bg-color: #f0f2f5;
+            --text-color: #333;
         }
 
-        .login-container h2 {
-            margin-bottom: 20px;
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: var(--bg-color);
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0;
+        }
+
+        .login-card {
+            background: white;
+            padding: 40px;
+            width: 100%;
+            max-width: 420px;
+            border-radius: 12px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+            text-align: center;
+            position: relative;
+        }
+
+        .logo-container {
+            margin-bottom: 30px;
+        }
+
+        .logo-container img {
+            height: 60px;
+            width: auto;
+        }
+
+        h2 {
+            font-family: 'Outfit', sans-serif;
             color: var(--primary-color);
+            margin-bottom: 10px;
+            font-weight: 700;
+        }
+
+        .subtitle {
+            color: #666;
+            margin-bottom: 30px;
+            font-size: 0.95rem;
         }
 
         .form-group {
@@ -30,103 +70,199 @@
             text-align: left;
         }
 
-        .form-group label {
+        .form-label {
             display: block;
-            margin-bottom: 5px;
-            color: var(--dark-color);
+            margin-bottom: 8px;
+            font-weight: 500;
+            color: var(--text-color);
+            font-size: 0.9rem;
         }
 
         .form-control {
             width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+            padding: 12px 15px;
+            border: 2px solid #e1e4e8;
+            border-radius: 8px;
+            font-size: 1rem;
+            transition: border-color 0.3s ease;
+        }
+
+        .form-control:focus {
+            outline: none;
+            border-color: var(--secondary-color);
         }
 
         .btn-login {
             width: 100%;
-            padding: 10px;
+            padding: 14px;
             background-color: var(--primary-color);
-            color: #fff;
+            color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 8px;
+            font-size: 1rem;
+            font-weight: 600;
             cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
+            transition: all 0.3s ease;
+            margin-top: 10px;
         }
 
         .btn-login:hover {
-            background-color: var(--secondary-color);
+            background-color: #1a252f;
+            transform: translateY(-1px);
+        }
+
+        .back-link {
+            display: inline-block;
+            margin-top: 25px;
+            color: #666;
+            text-decoration: none;
+            font-size: 0.9rem;
+            transition: color 0.3s;
+        }
+
+        .back-link:hover {
+            color: var(--secondary-color);
         }
 
         .error-msg {
-            color: red;
+            background-color: #fde8e8;
+            color: var(--accent-color);
+            padding: 10px;
+            border-radius: 6px;
+            border: 1px solid #fbd5d5;
+            margin-top: 20px;
+            font-size: 0.9rem;
             display: none;
-            margin-top: 10px;
+        }
+
+        /* Loading state */
+        .btn-login.loading {
+            opacity: 0.8;
+            cursor: not-allowed;
         }
     </style>
 </head>
 
 <body>
-    <!-- Optional: Minimum Header if desired, or just centered login -->
 
-    <div class="container">
-        <div class="login-container">
-            <div class="logo mb-4">
-                <img src="../images/logo.png" alt="The Rehab House Logo" style="max-height: 80px;">
-            </div>
-            <h2>Admin Login</h2>
-            <form id="loginForm" onsubmit="handleLogin(event)">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" class="form-control" required placeholder="Enter username">
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" class="form-control" required placeholder="Enter password">
-                </div>
-                <button type="submit" class="btn-login">Login</button>
-                <p class="error-msg" id="errorMsg">Invalid credentials</p>
-                <p class="error-msg" style="color: orange;" id="configMsg">Configuration missing</p>
-            </form>
+    <div class="login-card">
+        <div class="logo-container">
+            <img src="../images/logo.png" alt="The Rehab House">
         </div>
+
+        <h2>Welcome Back</h2>
+        <p class="subtitle">Please enter your credentials to access the dashboard.</p>
+
+        <form id="loginForm" onsubmit="handleLogin(event)">
+            <div class="form-group">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" id="username" class="form-control" placeholder="admin" required
+                    autocomplete="username">
+            </div>
+
+            <div class="form-group">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" id="password" class="form-control" placeholder="••••••••" required
+                    autocomplete="current-password">
+            </div>
+
+            <button type="submit" class="btn-login" id="loginBtn">Sign In</button>
+
+            <div id="errorMsg" class="error-msg">
+                Invalid username or password. Please try again.
+            </div>
+        </form>
+
+        <a href="../index.html" class="back-link">← Back to Home Page</a>
     </div>
 
     <!-- Load external config -->
     <script src="../js/config.js"></script>
     <script>
+        // SECURITY: Clear any existing session immediately upon loading implementation
+        // This ensures if someone hits "Back" from dashboard to login, they are logged out.
+        sessionStorage.removeItem('adminToken');
+
+        // Also clear legacy localStorage if it exists (cleanup)
+        localStorage.removeItem('adminLoggedIn');
+
         function handleLogin(e) {
             e.preventDefault();
-            const usernameInput = document.getElementById('username').value;
-            const passwordInput = document.getElementById('password').value;
+
+            const usernameInput = document.getElementById('username').value.trim();
+            const passwordInput = document.getElementById('password').value.trim();
             const errorMsg = document.getElementById('errorMsg');
-            const configMsg = document.getElementById('configMsg');
+            const loginBtn = document.getElementById('loginBtn');
 
-            // Hide previous errors
+            // Reset UI
             errorMsg.style.display = 'none';
-            configMsg.style.display = 'none';
+            loginBtn.classList.add('loading');
+            loginBtn.innerText = 'Verifying...';
 
-            // Check if config is loaded
-            if (typeof ADMIN_CONFIG === 'undefined') {
-                console.error("ADMIN_CONFIG is not defined. Make sure js/config.js exists.");
-                configMsg.style.display = 'block';
-                return;
-            }
+            // Simulate network delay for better UX (prevents brute force by slowing down)
+            setTimeout(() => {
+                // Check if config exists
+                if (typeof ADMIN_CONFIG === 'undefined') {
+                    errorMsg.innerText = "System Error: Configuration missing.";
+                    errorMsg.style.display = 'block';
+                    loginBtn.classList.remove('loading');
+                    loginBtn.innerText = 'Sign In';
+                    return;
+                }
 
-            // Compare with config constants
-            // Support both 'username' and legacy 'email' key in config for flexibility, though we default to username now
-            const validUsername = ADMIN_CONFIG.username || ADMIN_CONFIG.email;
+                const validUsername = ADMIN_CONFIG.username || ADMIN_CONFIG.email;
 
-            if (usernameInput === validUsername && passwordInput === ADMIN_CONFIG.password) {
-                // Successful login
-                localStorage.setItem('adminLoggedIn', 'true');
-                window.location.href = 'dashboard.html';
-            } else {
-                // Failed login
-                errorMsg.style.display = 'block';
-            }
+                if (usernameInput === validUsername && passwordInput === ADMIN_CONFIG.password) {
+                    // SUCCESS
+                    // Create a simple session token (timestamp + random)
+                    // In a real app, this would come from the server.
+                    const token = Date.now().toString() + Math.random().toString(36).substring(2);
+
+                    // Use sessionStorage for security (clears when tab closes)
+                    sessionStorage.setItem('adminToken', token);
+
+                    window.location.replace('dashboard.html');
+                } else {
+                    // FAILURE
+                    errorMsg.innerText = "Invalid credentials.";
+                    errorMsg.style.display = 'block';
+
+                    // Shake effect
+                    const card = document.querySelector('.login-card');
+                    card.style.animation = 'shake 0.5s';
+                    setTimeout(() => card.style.animation = '', 500);
+                }
+
+                loginBtn.classList.remove('loading');
+                loginBtn.innerText = 'Sign In';
+            }, 800); // 800ms artificial delay
         }
     </script>
+
+    <style>
+        @keyframes shake {
+            0% {
+                transform: translateX(0);
+            }
+
+            25% {
+                transform: translateX(-5px);
+            }
+
+            50% {
+                transform: translateX(5px);
+            }
+
+            75% {
+                transform: translateX(-5px);
+            }
+
+            100% {
+                transform: translateX(0);
+            }
+        }
+    </style>
+
 </body>
 
 </html>
