--- a/services.html
+++ b/services.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services | The Rehab House</title>
+    <title>Our Services | Neuro-rehab, Physiotherapy & Pain Management - The Rehab House</title>
     <meta name="description"
-        content="Explore our services including Physiotherapy, Neurorehabilitation, Pain Management, Orthopedic Therapy, and more at The Rehab House.">
+        content="Explore our specialized services: Neurorehabilitation, Orthopedic Therapy, Pain Management, Pediatric Rehab, and more. Advanced technologies for faster recovery.">
     <meta name="keywords"
-        content="Physiotherapy Services, Neurorehabilitation, Pain Management, Orthopedic Therapy, Pediatric Rehabilitation, Sports Injury">
+        content="Physiotherapy Services, Neurorehabilitation, Pain Management, Orthopedic Therapy, Pediatric Rehabilitation, Sports Injury, Vestibular Therapy, Balance Training">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
