Fix schema: Implement static MedicalBusiness with AggregateRating, hide testimonials.js

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <section class="contact-info">
             <h2>Clinic Address</h2>
             <p>📍 <strong>Purandare Diagnostic Centre, Dr Purandare Hospital</strong><br>
-                Opposite Girgaon Chowpatty, Charni Road, Mumbai</p>
+                Opposite Girgaon Chowpatty, Charni Road, Mumbai 400007</p>
             <p>📞 <strong>9653699526 / 7208343583</strong></p>
             <p>🌐 <a href="https://www.therehabhouse.in">www.therehabhouse.in</a></p>
         </section>
