--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
     <!-- JavaScript -->
-    <script src="js/testimonials.js"></script>
+    <!-- <script src="js/testimonials.js"></script> -->
     <script src="js/faqs.js"></script>
     <script src="js/header_footer.js"></script>
     <script src="js/main.js"></script>
