Update index.html: Hide testimonials heading

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- Testimonials Section -->
     <section class="testimonials" id="testimonials">
-        <h2>What Our Patients Say</h2>
+        <!-- <h2>What Our Patients Say</h2> -->
         <div class="testimonial-grid" id="testimonial-container">
             <!-- Loaded from js/testimonials.js -->
         </div>
