Perf: Optimize CSS loading, preload hero, fix CLS

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,14 @@
     <meta name="keywords"
         content="Contact Rehab House, Appointment, Physiotherapy Appointment, Neurorehabilitation Mumbai, Clinic Location, Book Physiotherapist">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/pages.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 
 <body>
