Perf: Optimize images and defer non-critical scripts

--- a/blog.html
+++ b/blog.html
@@ -118,8 +118,8 @@
 
     <!-- JavaScript -->
     <!-- Static Blog Data (Pre-rendered) -->
-    <script src="js/header_footer.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/header_footer.js" defer></script>
+    <script src="js/main.js" defer></script>
 </body>
 
 </html>
