--- a/blogs/ergonomics.html
+++ b/blogs/ergonomics.html
@@ -42,7 +42,7 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="../js/header_footer.js"></script>
+    <script src="../js/header_footer.js" defer></script>
 </body>
 
 </html>
