--- a/blogs/neuro-rehabilitation-process.html
+++ b/blogs/neuro-rehabilitation-process.html
@@ -73,7 +73,8 @@
                 focuses on the brain and the central nervous system. The primary goal is to stimulate
                 <strong>neuroplasticity</strong>—the brain's ability to form new synaptic connections. This allows
                 healthy parts of the brain to take over functions previously managed by damaged areas. It is a process
-                that requires high repetition, intensity, and a multidisciplinary approach.</p>
+                that requires high repetition, intensity, and a multidisciplinary approach.
+            </p>
 
             <h2>Phase 1: Initial Assessment and Clinical Evaluation</h2>
             <p>The journey begins with a comprehensive, 360-degree evaluation. No two neurological injuries are the
@@ -185,7 +186,7 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="../js/header_footer.js"></script>
+    <script src="../js/header_footer.js" defer></script>
 </body>
 
 </html>
