--- a/blogs/physiotherapy-brain-injury.html
+++ b/blogs/physiotherapy-brain-injury.html
@@ -150,7 +150,8 @@
             <h2>5. Task-Specific Training and Functional Independence</h2>
             <p>The ultimate goal of neuro-rehabilitation is not just to make a muscle stronger, but to make it *useful*.
                 <strong>Task-Specific Training</strong> is the gold standard in neuro-rehab. This means practicing the
-                actual activities the patient needs to do.</p>
+                actual activities the patient needs to do.
+            </p>
             <p>If a patient wants to be able to stand up from a chair, doing knee extensions in bed isn't enough. They
                 must practice the act of sit-to-stand repeatedly. Physiotherapists break down these complex functional
                 tasks into smaller, manageable components, mastering each before assembling them back into the whole
@@ -190,7 +191,7 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="../js/header_footer.js"></script>
+    <script src="../js/header_footer.js" defer></script>
 </body>
 
 </html>
