--- a/blogs/stroke-recovery.html
+++ b/blogs/stroke-recovery.html
@@ -43,7 +43,7 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="../js/header_footer.js"></script>
+    <script src="../js/header_footer.js" defer></script>
     <!-- Adjust paths in header_footer.js if needed? 
          WAIT: header_footer.js has hardcoded links like "index.html". 
          If loaded from "blogs/blog-1.html", links will break (look for blogs/index.html).
