--- a/search_results.html
+++ b/search_results.html
@@ -35,8 +35,8 @@
     <!-- Footer Component -->
     <div id="footer-placeholder"></div>
 
-    <script src="js/header_footer.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/header_footer.js" defer></script>
+    <script src="js/main.js" defer></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const params = new URLSearchParams(window.location.search);
