--- a/services.html
+++ b/services.html
@@ -126,9 +126,9 @@
     <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
     <!-- JavaScript -->
-    <script src="js/faqs.js"></script>
-    <script src="js/header_footer.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/faqs.js" defer></script>
+    <script src="js/header_footer.js" defer></script>
+    <script src="js/main.js" defer></script>
 </body>
 
 </html>
