--- a/about_us.html
+++ b/about_us.html
@@ -112,8 +112,8 @@
 
     <!-- JavaScript -->
     <!-- JavaScript -->
-    <script src="js/header_footer.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/header_footer.js" defer></script>
+    <script src="js/main.js" defer></script>
 </body>
 
 </html>
