--- a/blogs/vestibular-therapy.html
+++ b/blogs/vestibular-therapy.html
@@ -40,7 +40,7 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="../js/header_footer.js"></script>
+    <script src="../js/header_footer.js" defer></script>
 </body>
 
 </html>
