--- a/contact.html
+++ b/contact.html
@@ -124,8 +124,8 @@
     <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
     <!-- JavaScript -->
-    <script src="js/header_footer.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/header_footer.js" defer></script>
+    <script src="js/main.js" defer></script>
 </body>
 
 </html>
